# Vidferry

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  TODO.md  code-review-graph使用手册.md  conf.example.py  pyproject.toml  requirements.txt  run.py  sau_backend.py  sau_cli.py  start-win.bat  视频内容总结和处理版本二的方案.md
app/: __init__.py  config.py  extensions.py  publish_runner.py  publishing.py
app/api/: __init__.py  account.py  common.py  cookie.py  login.py  publish.py  static.py  upload.py  youtube.py
app/backend/: runtime.py  setup.py  shutdown.py
app/cli/: __init__.py  dispatcher.py  models.py  parser.py  utils.py
app/core/: editing_service.py  llm_service.py  material_service.py  publish_service.py  settings_service.py  subtitle_service.py  workflow.py  workflow_runner.py  youtube_download_service.py  youtube_search_service.py  youtube_service.py
app/db/: base.py  models.py  schema.py
app/db/crud/: __init__.py  account_crud.py  file_crud.py  job_crud.py  youtube_crud.py
app/utils/: backend_common.py  ffmpeg_util.py  file_util.py  format_util.py  request_util.py  sse.py  sse_util.py  time_util.py
db/: createTable.py
docs/: CLI.md
myUtils/: auth.py  login.py
sau_frontend/: index.html  package.json  vite.config.js
sau_frontend/src/: App.vue
sau_frontend/src/api/: index.js  material.js  youtube.js
sau_frontend/src/router/: index.js
sau_frontend/src/stores/: account.js  app.js  index.js  notification.js
sau_frontend/src/utils/: request.js
uploader/douyin_uploader/: main.py
uploader/xiaohongshu_uploader/: main.py
(+7 files in other folders)
